# pack

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: standard.yml
docker/: Dockerfile
src/: autoremove.rs  db_backend.rs  extract.rs  install.rs  main.rs  populate.rs  purge.rs  update.rs  utils.rs
